# ros2_lidar_stereo_camera_projection

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: calibration.launch.py  object_detection.launch.py  projection.launch.py
lidar_camera_calibration/: calibration_projection_node.py  object_detection.py
lidar_camera_calibration/utils/: image_geometry.py
